Mon Aug  3 18:12:54 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* thread.c (recursive_push): untrust internal hash to prevent
	  unexpected SecurityError.  a patch from Kazuhiro NISHIYAMA.
	  Fix: #1864  [ruby-dev:38982]

Mon Aug  3 17:06:05 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/README: updated.  a patch from Daniel Bovensiepen.
	  [ruby-core:24693]

Mon Aug  3 16:28:09 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_connect): return value was broken when some
	  error occurred.
	  [ruby-core:24234]

Mon Aug  3 15:48:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_{permutation,combination}): disallow reentrance
	  with continuation since work-buffers cannot restore.

	* array.c (rb_ary_{permutation,combination,product}): must not use
	  ary_discard on strings.

Sat Aug  1 19:23:27 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_trans): change condition of singlebyte
	  optimization.

Sat Aug  1 05:18:36 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_trans): can't use singlebyte optimization when
	  the replacement is multibyte. [ruby-core:24612]

Fri Jul 31 16:28:33 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_stdio_set_default_encoding): added.

	* ruby.c (process_options): call rb_stdio_set_default_encoding
	  after setting defualt internal and external.

Fri Jul 31 18:01:34 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/securerandom.rb (SecureRandom.random_bytes): return string should
	  be ASCII-8BIT.  [ruby-core:24640]

Fri Jul 31 10:54:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen): reduced unnecessary node at string
	  literal concatenation with empty head dstr.  [ruby-dev:38968]

Fri Jul 31 02:57:39 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (literal_concat_gen): NODE_DSTR was incorrectly handled as
	  NODE_STR.  [ruby-dev:38968]

	* bootstraptest/test_syntax.rb: add a test for above.
