@@ -1,3 +1,11 @@
+Mon Aug  3 18:25:08 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* sample/svr.rb: obsolete TCPserver renamed.  [ruby-core:24712]
+
+	* sample/tsvr.rb: ditto.
+
+	* sample/dualstack-httpd.rb: ditto.
+
 Mon Aug  3 18:12:54 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* thread.c (recursive_push): untrust internal hash to prevent
